; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/oss/extr_seq_oss.c_odev_ioctl.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/seq/oss/extr_seq_oss.c_odev_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.seq_oss_devinfo* }
%struct.seq_oss_devinfo = type { i32 }

@ENXIO = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i32, i64)* @odev_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @odev_ioctl(%struct.file* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.seq_oss_devinfo*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = getelementptr inbounds %struct.file, %struct.file* %9, i32 0, i32 0
  %11 = load %struct.seq_oss_devinfo*, %struct.seq_oss_devinfo** %10, align 8
  store %struct.seq_oss_devinfo* %11, %struct.seq_oss_devinfo** %8, align 8
  %12 = load %struct.seq_oss_devinfo*, %struct.seq_oss_devinfo** %8, align 8
  %13 = icmp ne %struct.seq_oss_devinfo* %12, null
  %14 = xor i1 %13, true
  %15 = zext i1 %14 to i32
  %16 = call i64 @snd_BUG_ON(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %3
  %19 = load i64, i64* @ENXIO, align 8
  %20 = sub nsw i64 0, %19
  store i64 %20, i64* %4, align 8
  br label %26

21:                                               ; preds = %3
  %22 = load %struct.seq_oss_devinfo*, %struct.seq_oss_devinfo** %8, align 8
  %23 = load i32, i32* %6, align 4
  %24 = load i64, i64* %7, align 8
  %25 = call i64 @snd_seq_oss_ioctl(%struct.seq_oss_devinfo* %22, i32 %23, i64 %24)
  store i64 %25, i64* %4, align 8
  br label %26

26:                                               ; preds = %21, %18
  %27 = load i64, i64* %4, align 8
  ret i64 %27
}

declare dso_local i64 @snd_BUG_ON(i32) #1

declare dso_local i64 @snd_seq_oss_ioctl(%struct.seq_oss_devinfo*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
